[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/cloaking_enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/game/enemy5.png" type="Texture" id=2]
[ext_resource path="res://assets/game/explosion_particle.png" type="Texture" id=3]
[ext_resource path="res://assets/sound/enemy_death.wav" type="Sample" id=4]
[ext_resource path="res://assets/sound/enemy_hit.wav" type="Sample" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 0, -25, 25, 0, 0, 25, -25, 0 )

[sub_resource type="Animation" id=2]

resource/name = "cloak"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

resource/name = "decloak"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=4]

resource/name = "destroyed"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("death_particles:config/emitting")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visibility/self_opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("death_particles:visibility/self_opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.5, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sound:play/play")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 2,
"values": [ "enemy_death" ]
}

[sub_resource type="Animation" id=5]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="SampleLibrary" id=6]

samples/enemy_death = {
"db": -7.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/enemy_hit = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[node name="cloaking_enemy" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
has_powerup = false

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/cloak = SubResource( 2 )
anims/decloak = SubResource( 3 )
anims/destroyed = SubResource( 4 )
anims/spawn = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="spawn_timer" type="Timer" parent="."]

process_mode = 0
wait_time = 0.7
one_shot = true
autostart = true

[node name="death_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.8
one_shot = true
autostart = false

[node name="death_particles" type="Particles2D" parent="."]

z/z = -1
config/amount = 20
config/lifetime = 1.25
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.01
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 250.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 50.0
params/initial_angle = 0.0
params/initial_size = 1.25
params/final_size = 0.5
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.5
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.7
randomness/final_size = 0.5
randomness/hue_variation = 0.03
color/color = Color( 0.203934, 0.0563049, 0.351563, 1 )

[node name="hit_particles" type="Particles2D" parent="."]

config/amount = 10
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.01
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 150.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 100.0
params/initial_angle = 1.0
params/initial_size = 10.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.5
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 0.3
color/color = Color( 0.203773, 0.0677032, 0.339844, 1 )

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 2
config/samples = SubResource( 6 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="area_enter" from="." to="." method="_on_cloaking_enemy_area_enter"]

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]

[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]


